--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "better-auth": "^1.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -50,6 +51,7 @@
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -66,6 +68,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/papaparse": "^5.5.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
