--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "dataforge",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -63,7 +66,11 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "@tanstack/react-query": "^5.75.5",
+    "axios": "^1.7.9",
+    "@dataforge/query-hooks": "*",
+    "@dataforge/types": "*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
