--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.77",
+    "@ai-sdk/react": "^2.0.106",
+    "@dataforge/query-hooks": "*",
+    "@dataforge/types": "*",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -41,8 +45,11 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.86.0",
+    "@tanstack/react-query": "^5.75.5",
     "@vercel/analytics": "1.3.1",
+    "ai": "^5.0.106",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "better-auth": "^1.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,11 +73,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76",
-    "@tanstack/react-query": "^5.75.5",
-    "axios": "^1.7.9",
-    "@dataforge/query-hooks": "*",
-    "@dataforge/types": "*"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
