--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query": "^5.75.5",
     "@vercel/analytics": "1.3.1",
     "ai": "^5.0.106",
+    "arquero": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "better-auth": "^1.4.4",
